Change network connecting method